force-app/main/default/objects/Product2/fields/Display_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_Price__c</fullName>
    <label>Display Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>